--- a/app/src/main/res/drawable/fondo3.xml
+++ b/app/src/main/res/drawable/fondo3.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape  xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#054575"/>
-    <corners android:topRightRadius="15dp" android:topLeftRadius="15dp"/>
-
+    <solid android:color="#0E5891"/>
+    <corners android:topLeftRadius="15dp" android:topRightRadius="15dp"/>
 </shape>
