--- a/app/src/main/res/layout/activity_persona.xml
+++ b/app/src/main/res/layout/activity_persona.xml
@@ -329,7 +329,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.454"
-                    app:srcCompat="@drawable/hospital" />
+                    app:srcCompat="@drawable/icono_hospital" />
 
                 <TextView
                     android:id="@+id/COMPLETADOEFECTOR"
