--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         android:layout_height="41dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/button1"
-        android:onClick="Guardar"
+        android:onClick="Guardar2"
         android:text="@string/terminar_grupo_familiar"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
